tests/paczka1/fuzzy1/27426757.err
Error in line 2: 3wvGVrCh A72 88,5
Error in line 1: EzGWF A453 56,6
Error in line 10: EzGWF S847 236,7
Error in line 17: EzGWF A453 38,0
Error in line 19: EzGWF S847 43,4
Error in line 24: EzGWF A72 97,5
Error in line 27: EzGWF S847 66,2
Error in line 32: I1CT¡MAgV S847 77,3
